# eabout

./: Makefile.am  configure.ac
data/: Makefile.am  about.en.txt  eabout.ini
debian/: changelog  control  rules
help/: Makefile.am  eabout.ini  eabout.pot  en.po
po/: Makefile.am  POTFILES  eabout.pot  pl.po  ru.po
scripts/: Makefile.am  dpkg.sh  misc.sh
src/: Makefile.am  eabout.h  info.c  main.c  packages.c  script.c  script.h
themes/: Makefile.am  eabout.edc
vendors/: azbooka.conf  eb600.conf  n516.conf  prs505.conf  v3.conf  v3ext.conf
